[package]
name = "tui-ether-pinger"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.28"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# ICMP Pinging
surge-ping = "0.8"

# XML Parsing
quick-xml = "0.36"

# Data Structures
parking_lot = "0.12"

# Error Handling
anyhow = "1.0"

# Time
chrono = "0.4"

# Random number generation
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
